Update changelog for 3.26.0 release